--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-- fix regexp skip in js_parse_skip_parens_token()
 - 64-bit atoms in 64-bit mode?
 - rename CONFIG_ALL_UNICODE, CONFIG_BIGNUM, CONFIG_ATOMICS, CONFIG_CHECK_JSVALUE ?
 - unify coding style and naming conventions
@@ -51,8 +50,6 @@ Optimizations:
 
 Extensions:
 - support more features in [features] section
-- add TC39 stage 3 proposals: String.prototype.matchAll, Symbol.matchAll
-- fix preprocessor bug if nested #ifdef in jscompress.c
 - add built-in preprocessor in compiler, get rid of jscompress
   handle #if, #ifdef, #line, limited support for #define
 - limited support for web assembly 
@@ -76,6 +73,8 @@ REPL:
 - close all predefined methods in repl.js and jscalc.js
 
 Test262o:   0/11262 errors, 463 excluded
-Test262:   33/58145 errors, 785 excluded, 5576 skipped
-Test262bn: 39/60250 errors, 718 excluded, 4587 skipped
-test262 commit: 2ee3864136747ee69401b2d266e234cdd0a95965
+Test262o commit: 7da91bceb9ce7613f87db47ddd1292a2dda58b42 (es5-tests branch)
+
+Test262:   2/67090 errors, 842 excluded, 1386 skipped
+Test262bn: 2/69191 errors, 775 excluded, 399 skipped
+test262 commit: 59a1a016b7cf5cf43f66b274c7d1db4ec6066935
